--- a/src/main/java/Interface/MainFrame.form
+++ b/src/main/java/Interface/MainFrame.form
@@ -13,7 +13,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="7fe5a" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
+      <component id="7fe5a" class="javax.swing.JProgressBar" binding="parseBar">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -95,12 +95,23 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="1ba79" class="javax.swing.JTree" binding="tree">
+          <component id="1ba79" class="javax.swing.JTree" binding="tree" custom-create="true">
             <constraints/>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="true"/>
+              <rootVisible value="false"/>
+              <showsRootHandles value="true"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
+      <component id="3f6e8" class="javax.swing.JProgressBar" binding="downloadBar">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
