--- a/src/main/java/Interface/MainPanel.form
+++ b/src/main/java/Interface/MainPanel.form
@@ -402,10 +402,10 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Nombre de threads téléchargement "/>
+              <text value="Nombre de threads"/>
             </properties>
           </component>
-          <component id="7bf3e" class="javax.swing.JSpinner" binding="downloadSpinner" custom-create="true">
+          <component id="7bf3e" class="javax.swing.JSpinner" binding="threadSpinner" custom-create="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -416,14 +416,19 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Nombre de threads parsing"/>
+              <text value="Priorité au"/>
             </properties>
           </component>
-          <component id="e7262" class="javax.swing.JSpinner" binding="paringSpinner" custom-create="true">
+          <component id="3e5d6" class="javax.swing.JComboBox" binding="priorityCB">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <model>
+                <item value="parsing"/>
+                <item value="download"/>
+              </model>
+            </properties>
           </component>
           <grid id="5c3fe" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
