--- a/src/main/java/Interface/MainPanel.form
+++ b/src/main/java/Interface/MainPanel.form
@@ -443,17 +443,6 @@
               <text value="Priorité au"/>
             </properties>
           </component>
-          <component id="3e5d6" class="javax.swing.JComboBox" binding="priorityCB">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <model>
-                <item value="parsing"/>
-                <item value="download"/>
-              </model>
-            </properties>
-          </component>
           <grid id="5c3fe" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -480,6 +469,14 @@
               </component>
             </children>
           </grid>
+          <component id="dd0bb" class="javax.swing.JSlider" binding="slider">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <maximum value="1"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <hspacer id="96b93">
